--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-
+body,
+html { 
+  width: 100%; 
+  height: 100%;
+  background: url(header.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 hr {
   max-width: 65px;
